# GuiApp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
headers/: GuiApp.hpp  docking.hpp
libs/app/: CMakeLists.txt  application.cpp  application.hpp
libs/app/glad/: CMakeLists.txt  glad.c  glad.h
libs/dear/backends/: imgui_impl_opengl3.cpp
libs/imgui/backends/: imgui_impl_glfw.cpp
src/: GuiApp.cpp  docking.cpp  docking.hpp  main.cpp
